--- a/content/episodes/s01e22.md
+++ b/content/episodes/s01e22.md
@@ -1,6 +1,7 @@
 ---
 title: There's no such thing as Numeracy.
 date: 
+draft: true
 audio: https://archive.org/download/pirate-school-podcast/pirate-school-22.mp3
 audiolength: 9342975
 audioduration: 00:18:49
